Day 5/content/02-pod-resources copy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 02-pod

spec:
  containers:

  - name: 02-pod
    image: nginx:alpine

    ports:
      - containerPort: 80

    resources:
      requests:
        memory: "64Mi"
        cpu: "200m"
      limits:
        memory: "128Mi"
        cpu: "500m"

    readinessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 10
    livenessProbe:
      tcpSocket:
        port: 80
      initialDelaySeconds: 15
      periodSeconds: 20
