Day 5/content/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 03-dep

spec:
  selector:
    matchLabels:
      app: nginx

  replicas: 2

  template:
    metadata:
      labels:
        app: nginx
      
    spec:
      containers:

      - name: 03-dep
        image: nginx:alpine

        ports:
          - containerPort: 80

        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
