Day 5/content/04-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: 04-daem

spec:
  selector:
    matchLabels:
      app: 04-daem

  template:
    metadata:
      labels:
        app: 04-daem

    spec:
      containers:

      - name: 04-daem
        image: nginx:alpine

        ports:
          - containerPort: 80

        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
