Day 5/content/08-deploymenclusterip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 08-dep

spec:
  selector:
    matchLabels:
      role: 08-dep

  replicas: 2

  template:
    metadata:
      labels:
        role: 08-dep
      
    spec:
      containers:
      - name: 08-dep
        image: gcr.io/google-samples/hello-app:1.0
        ports:
          - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: dep-08

spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    role: 08-dep
