Day 5/content/11.ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 11-ingress-1

spec:
  selector:
    matchLabels:
      role: 11-ingress-1

  replicas: 3

  template:
    metadata:
      labels:
        role: 11-ingress-1
      
    spec:
      containers:

      - name: 11-ingress-1
        image: gcr.io/google-samples/hello-app:1.0
        ports:
          - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: 11-ingress-2

spec:
  selector:
    matchLabels:
      role: 11-ingress-2

  replicas: 3

  template:
    metadata:
      labels:
        role: 11-ingress-2
      
    spec:
      containers:

      - name: 11-ingress-2
        image: gcr.io/google-samples/hello-app:1.0
        ports:
          - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: ingress-1

spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    role: 11-ingress-1

---

apiVersion: v1
kind: Service
metadata:
  name: ingress-2

spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    role: 11-ingress-2
